--- a/source/contact_us.html.haml
+++ b/source/contact_us.html.haml
@@ -1,12 +1,11 @@
 ---
 image: contact
-title: Contact Us
+title: <span class="black">Contact Us</span>
+hero: true
+menu_button_black: true
 ---
-/.image-container
-/  = image_tag 'contact-1.jpg', :alt => 'Phone Picture', :class => 'contact-image'
-/  = image_tag 'contact-2.jpg', :alt => 'Phone Picture', :class => 'contact-image'
-.text-wrap   
-  %h3.underline Email
-  %p eva@duartesalon.com
-  %h3.underline Telephone
-  %p 323-461-5500
+ 
+%h3#top Email
+%p eva@duartesalon.com
+%h3 Telephone
+%p 323-461-5500
