--- a/source/job_opportunities.html.haml
+++ b/source/job_opportunities.html.haml
@@ -1,10 +1,8 @@
 ---
 image: job-opportunities
 title: Job Opportunities
+hero: true
 ---
-/.image-container
-/	=image_tag 'unknown.jpg', :alt => 'Salon'
 
-%header.right
-	%h3.underline-extended Job Opportunities
-	%p At Duarte we are actively looking for hair colorists and cutters to join our team. If you are interested email eva@duartesalon.com with a copy of your resume.
+%p At Duarte we are actively looking for hair colorists and cutters to join our team. 
+%p If you are interested email eva@duartesalon.com with a copy of your resume.
