--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -1,12 +1,12 @@
 ---
 image: services
 title: Services
+hero: true
 ---
 /.image-container-small
 /  = image_tag 'wind.jpg', :alt => 'Services Picture'
-.services-container
-  %h2.underline Services
-  .services
+.services-container#top
+  .service
     %p Haircut
     %p Highlights
     %p Color
