--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -3,17 +3,25 @@
 @import "variables";
 @import "nav"; 
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@font-face {
+  font-family: 'amazon';
+  src: url('/fonts/amazonrg.ttf')  format('truetype')
+}
+
+h1,h2,h3{
+	font-family: amazon;
+	font-weight: 400;
+}
 
 html, body{
 	overflow-x: hidden;  
     -webkit-tap-highlight-color: rgba(0,0,0,0);  
     height: 100%;
 	margin: 0;
+	font-family:  open sans, sans-serif;
 }
 .pushy{
-    width: 200px; /* Changed the width to 400px */
-
+    width: 250px; /* Changed the width to 400px */
     transition: 1s;
 }
 
@@ -31,17 +39,29 @@ html, body{
 	height: 50vw;
 	position: relative;
 }
+
 .title{
 	position: absolute;
 	left: 50%;
-	top: 80%;
+	top: 50%;
 	transform: translate(-50%, -50%);
 	width: 50%;
 	z-index: 1;
 	text-align: center;
 
 	h1{
+		margin: 0;
+	}
+	h1 {
+		font:400 100px/80px amazon, open sans, sans serif; 
+		opacity: .9;
+		color: white;
+		text-decoration: none;
+		padding: 0 10px;
+	}
 
+	h1 span.black{
+		color: black;
 	}
 }
 
@@ -87,9 +107,9 @@ html, body{
 	@include span-columns(12);
 	float: left;
 	position: relative;
-	font-family:  open sans, sans-serif;
-	font-size: 14px;
-	padding: 14px 0px 0px 0px;
+	font: 400 24px/38px open sans, sans-serif;
+
+	padding: 14px 0px 25px 0px;
 	
 	@media #{$mq-mobile}{
 		@include span-columns(12);
@@ -133,29 +153,37 @@ html, body{
 	}
 }
 .media-container{
-	float: left;
-	margin-top: 15px;
+	margin-top: 57px;
+	text-align: center;
+	margin-top: 100px;
 }
 .text-wrap{
 	@include span-columns(3);
 	@include shift(1);
 	margin-left: 15px;
+	.container{
+		padding-bottom: 0;
+		margin-top: 50px;
+	}
 	@media #{$mq-tablet-mobile}{
 		@include span-columns(12);
-		@include shift(0);
+		@include shift(2);
+		.container{
+			@include span-columns(5);
+		}
 	}
 }
 a{
 	color: black;
 }
-h3.underline{
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	width: 175px;
-}
-.services{
+.service{
 	float: left;
-	margin-top: -14px;
+
+	@media only screen and (max-width: 841px){
+		margin-top: -24px;
+	}
 }
+
 .services-container{
 	@extend .left;
 }
@@ -165,7 +193,7 @@ h3.underline{
 }
 .left{
 	@media #{$mq-desktop}{
-		width: 55%;
+		width: 100%;
 		float: left;
 	}
 }
@@ -175,18 +203,37 @@ h3.underline{
 		width: 42%;
 	}
 }
-.underline, .underline-extended{
-	width: 225px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-}
-h2.underline-extended{
-	border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-	width: 300px;
-	@media #{$mq-mobile}{
-		width: 370px;
-	}
-}
+
 .center, .video{
 	text-align: center;
 }
+
+.index .title{
+	left: 290px;
+	top: 55px;
+}
+
+
+.services .title {
+	left: 290px;
+	top: 55px;
+}
+
+.bio .title{
+	left: 54%;
+	top: 71%;
+}
+
+.hair_institute .title{
+	left: 65%;
+	top: 27%;
+	white-space: nowrap;
+}
+
+.contact_us .title{
+	left: 48%;
+	top: 23%;
+}
+
+
 @import 'pushy';
