--- a/source/hair_institute.html.haml
+++ b/source/hair_institute.html.haml
@@ -1,34 +1,33 @@
 ---
-image: woman
+image: hair-institute
 title: Hair Institute
+hero: true
 --- 
-%ul.sub-nav
+%ul#top.sub-nav
 	%li
-		= link_to 'Trichology', '#trichology'
+		= link_to 'Trichology', '#top'
 	%li
 		= link_to 'Consultation', '#consultation'
 	%li
 		= link_to 'Treatments', '#hair_institute_treatments'
 	%li
 		= link_to 'Mini Treatments', '#mini_treatments'
-/.image-container-small
-/	=image_tag 'institute.jpg', :alt => 'Hair institute'
-%header.left
-	%h3#trichology.underline Trichology
-%p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause.
+
+%h1 Trichology
+%p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause. We offer services using the latest hair care products from <a href='http://www.leonorgreyl-usa.com/leonor-greyl-customized-hairspa-treatment-centers/' target="_blank">Leonor Grey</a>, <a href='http://www.hairgrowthcenters.com/' target="_blank">Evolution Hair</a>, and <a href='http://www.igrowlaser.com/' target="_blank">Igrowlaser</a>.
 
 %p We are a proud <a href='http://www.worldtrichologysociety.org/members' target="_blank">member of the World Trichology Society</a>, a  professional  organization  dedicated to educating, supporting, and promoting Trichology in North America and Worldwide. We are committed to helping the public by educating them about the possible causes of their hair loss and by informing them of their choice and treatments.
 
 %p Not all hair loss is permanent, there are many hair loss conditions that can be slowed, halted or even reversed. The first step is finding out all of the causes responsible for your hair loss. Treatment is then provided for each one of those causes. This means a multifaceted, customized treatment regimen may be necessary to achieve best results.
 
-%h3#consultation.underline Consultation
+%h2#consultation Consultation
 %p It is best to discover the origin of hair loss by scheduling a complementary in-person consultation. In order to determine an appropriate treatment regimen, it is necessary to first identify your specific type of hair loss as well as the root cause(s) that may be responsible .
 
 %p During your private and confidential comprehensive evaluation, we take a full case history by specifically detailing health, diet, stress, lifestyle, and environmental influences on your hair and scalp.
 
-%h2#hair_institute_treatments.underline-extended Hair Institute Treatments
+%h2#hair_institute_treatments Hair Institute Treatments
 
-%p Leonor Greyl Treatemnts are individually prescribed to bring about spectacular shine and vitality to your hair by combining 100% natural vegetabal oils and plant extracts. There is a specific treatment for every scalp condition, even the most challenging!
+%p Leonor Greyl Treatments are individually prescribed to bring about spectacular shine and vitality to your hair by combining 100% natural vegetabal oils and plant extracts. There is a specific treatment for every scalp condition, even the most challenging!
 
 What makes our customized treatments unique?
 %ul.treatments
@@ -40,7 +39,7 @@ What makes our customized treatments unique?
 	%li Results are immediate
 	%li Unique and unforgettable experience
 
-%h3.underline Treatments
+%h2 Treatments
 
 %ul.treatments
 	%li Brilliance Treatment-  Dry and lifeless hair
@@ -50,16 +49,16 @@ What makes our customized treatments unique?
 	%li S.O.H. Treatments- Severely Damaged Hair
 	%li Just for Men Treatment- Devitalized Scalp and/or Hair Loss
 	
-%h3#mini_treatments.underline-extended Mini Treatments*
+%h2#mini_treatments Mini Treatments*
 %ul.treatments
-	%li  <strong>Cult</strong>
+	%li  Cult
 	%ul
 		%li Huile de Palme: This perfect blend of botanical oils gently breaks down product buildup, adds shine, softens and pre-detangles hair. 
 		%li Regenerescence Naturelle: The regenerative properties and benefits in this blend of essential oils purify and increase scalp blood circulation.
-	%li  <strong>Mini S.O.H.</strong>
+	%li  Mini S.O.H.
 	%ul
 		%li Masque Quintessence: The ultimate weapon for desparate hair! Cupuacu and Manketti Oils combine to counteract the harsh effects of bleaching, highlighting and straightening can cause to the hair. Its nourishing nectar revitalizes, regenerates and repairs even the most damaged hair leaving it shiny, supple and manageable.
-	%li <strong>Signature</strong>
+	%li Signature
 	%ul
 		%li Huile de Palme: This perfect blend of botanical oils gently breaks down product buildup, adds shine, softens and pre-detangles hair. 
 		%li Crème aux Fleurs: The natural Sage and Chamomile in this (washing) treatment were specifically selected for their calming and soothing effects. This deep treatment is ideal for dry, color-treated and/or frizzy hair and scalps prone to sensitivity. 
