--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,12 +1,9 @@
 ---
 image: home 
-title: Duarte Salon
+title: Duarte
+hero: true
 ---
-/.image-container
-/	%a.image
-/		=image_tag 'services.png', :alt => 'Woman Star', :class => 'homepage'
-
-%p In Los Angeles, a town where special treatment is too often reserved for celebrities, Salon Duarte has broken all the rules and invites every customer to have the ultimate salon experience.
+%p#top In Los Angeles, a town where special treatment is too often reserved for celebrities, Salon Duarte has broken all the rules and invites every customer to have the ultimate salon experience.
 
 %p Salon Duarte is a Spanish style salon in Los Angeles offering a full range of color, cuts and styling. We also offer <strong><a href="/hair_institute">Trichology</a></strong> services using the latest hair care products from <a href='http://www.leonorgreyl-usa.com/leonor-greyl-customized-hairspa-treatment-centers/' target="_blank">Leonor Grey</a>, <a href='http://www.hairgrowthcenters.com/' target="_blank">Evolution Hair</a>, and <a href='http://www.igrowlaser.com/' target="_blank">Igrowlaser</a>. The European ideal behind the salon evokes a fashion-forward yet comfortable atmosphere where clients are treated to top quality services.
 
