--- a/source/location.html.haml
+++ b/source/location.html.haml
@@ -1,16 +1,19 @@
 ---
 image: location
 title: Job Opportunities
+menu_button_black: true
 ---
 /.image-container
 /  =image_tag 'salon.jpg', :alt => 'Salon'
 .text-wrap   
-  %h3.underline Address
-  %p 5927 Franklin Ave
-  %p Los Angeles, CA 90028
-  %p (323) 461-5500
-  %h3.underline Schedule
-  %p Tue - Sat   10.00 - 17.00
+  .container
+    %h3 Address
+    %p 5927 Franklin Ave
+    %p Los Angeles, CA 90028
+    %p (323) 461-5500
+  .container
+    %h3 Schedule
+    %p Tue - Sat   10.00 - 17.00
 
 .media-container
   %iframe{:frameborder => "0", :height => "375", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=5927+Franklin+Avenue,+Los+Angeles,+CA&aq=0&oq=5927+franklin+ave.&sll=37.0625,-95.677068&sspn=42.631141,93.076172&ie=UTF8&hq=&hnear=5927+Franklin+Ave,+Los+Angeles,+California+90068&t=m&ll=34.105267,-118.319321&spn=0.026651,0.040684&z=14&iwloc=A&output=embed", :width => "475"}
