--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -7,7 +7,7 @@
 		cursor: pointer;
 
 		span{
-			opacity: .9;
+			//opacity: .9;
 		}
 	}
 	&:before{
@@ -29,10 +29,12 @@
 		top: -36px;
 		left: 10px;
 		opacity: .0;
-
-
 	}
-	
+
+	@media #{$mq-mobile}{
+		font-size: 65px;
+		top: 0px;
+	}
 }
 .button-black:before{
 	color: black;
@@ -76,18 +78,23 @@ nav{
 	}
 }
 ul.sub-nav{
-		@extend .nav;
-		margin-top: 0;
-		padding-left: 0;
-		text-align: center;
-		list-style: none;
+	@extend .nav;
+	margin-top: 30px;
+	padding-left: 0;
+	text-align: center;
+	list-style: none;
 
+	li{
+		width: 24%;
+	}
+
+	@media #{$mq-mobile}{
+		margin-top: 35px;
+		
 		li{
-			width: 24%;
-			@media #{$mq-mobile}{
-				width: 47%;
-			}
+			width: 47%;
 		}
+	}
 }
 ul.treatments{
 	list-style: none;
