--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -1,7 +1,7 @@
 .menu-btn{
 	top: 15px;
 	left: 10px;
-	font: 400 100px/80px amazon, open sans, sans serif;
+	font: 400 100px/80px amazon, Pinyon Script,open sans, sans serif;
 
 	&:hover{
 		cursor: pointer;
@@ -51,7 +51,7 @@ nav{
 	}
 }
 .nav{
-	font: 400 26px/30px amazon, serif;
+	font: 400 26px/30px amazon, Pinyon Script, serif;
 	padding: 0;
 	margin-top: 40%;
 
