--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -2,6 +2,7 @@
 	top: 15px;
 	left: 10px;
 	font: 400 100px/80px amazon, Pinyon Script,open sans, sans serif;
+	width: auto;
 
 	&:hover{
 		cursor: pointer;
