--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -45,6 +45,7 @@ html, body{
 	position: absolute;
 	left: 50%;
 	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	width: 50%;
 	z-index: 1;
