initial design commit

--- a/source/layouts/elements/_sidebar.haml
+++ b/source/layouts/elements/_sidebar.haml
@@ -1,4 +1,5 @@
-%nav.pushy.pushy-left
+%nav
+  =image_tag 'logo.png', :alt => 'Duarte Logo', :class => 'Duarte_logo'
   %ul.nav
     %li
       = link_to 'Home', '/'
