--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -1,67 +1,32 @@
-.menu-btn{
-	top: 15px;
-	left: 10px;
-	font: 400 100px/80px amazon, Pinyon Script,open sans, sans serif;
-	width: auto;
-
-	&:hover{
-		cursor: pointer;
-
-		span{
-			//opacity: .9;
-		}
-	}
-	&:before{
-		
-		color: white;
-		content: "D";
-		opacity: .9;
-	}
-
-	span{
-
-		transition: .5s all;
-		font: 400 20px/20px open sans, sans serif;
-		color: white;
-		border: 1px solid white;
-		padding: 0px 6px 2px;
-		border-radius: 9px;
-		position: relative;
-		top: -36px;
-		left: 10px;
-		opacity: .0;
-	}
-
-	@media #{$mq-mobile}{
-		font-size: 65px;
-		top: 0px;
-	}
-}
-.button-black:before{
-	color: black;
-}
 nav{
-	float: left;
 	font-size: 14px;
 	line-height: 25px;
 	position: relative;
 	top: 15px;
+
 	@media #{$mq-mobile}{
 		@include span-columns(12);
 		top: 0;
 	}
+
+	img{
+		float: left;
+		width: 200px;
+		position: relative;
+		top: -23px;
+		padding: 0 10px;
+	}
 }
 .nav{
-	font: 400 26px/30px amazon, Pinyon Script, serif;
+	font: 400 16px/30px open sans, sans serif;
 	padding: 0;
-	margin-top: 40%;
 
 	li{
 		display: inline-block;
 		list-style: none;
-		width: 250px;
 		text-align: center;
 		white-space: nowrap;
+
 		&:hover{
 			//background-color: rgba(0, 0, 0, 0.05);
 		}
@@ -69,7 +34,7 @@ nav{
 			text-decoration: none;
 			color: black;
 			display: block;
-			padding-right: 30px;
+			padding-right: 10px;
 		}
 	}
 	@media #{$mq-mobile}{
