--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,6 +2,7 @@
 image: home 
 title: Duarte
 hero: true
+home: true
 ---
 %p#top In Los Angeles, a town where special treatment is too often reserved for celebrities, Salon Duarte has broken all the rules and invites every customer to have the ultimate salon experience.
 
