--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -13,18 +13,21 @@ nav{
 		float: left;
 		width: 200px;
 		position: relative;
-		top: -23px;
+		top: -10px;
 		padding: 0 10px;
 	}
 }
 .nav{
-	font: 400 16px/30px open sans, sans serif;
-	padding: 0;
+	font: 300 11px/30px open sans, sans serif;
+	text-transform: uppercase;
+	padding: 13px 0;
 
 	li{
 		display: inline-block;
 		list-style: none;
 		text-align: center;
+		position: relative;
+		top: 2px;
 		white-space: nowrap;
 
 		&:hover{
