--- a/source/contact_us.html.haml
+++ b/source/contact_us.html.haml
@@ -5,7 +5,7 @@ hero: true
 menu_button_black: true
 ---
  
-%h2#top Email
-%p eva@duartesalon.com
-%h2 Telephone
-%p 323-461-5500
+%h1#top Email
+%h3 eva@duartesalon.com
+%h1 Telephone
+%h3 323-461-5500
