--- a/source/services.html.haml
+++ b/source/services.html.haml
@@ -3,9 +3,7 @@ image: services
 title: Services
 hero: true
 ---
-/.image-container-small
-/  = image_tag 'wind.jpg', :alt => 'Services Picture'
-.services-container#top
+.services-container
   .service
     %p Haircut
     %p Highlights
