--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -1,8 +1,10 @@
 nav{
 	font-size: 14px;
 	line-height: 25px;
+	margin-bottom: 20px;
 	position: relative;
-	top: 15px;
+	text-align: right;
+	top: 10px;
 
 	@media #{$mq-mobile}{
 		@include span-columns(12);
@@ -13,31 +15,32 @@ nav{
 		float: left;
 		width: 200px;
 		position: relative;
-		top: -10px;
+		top: -14px;
 		padding: 0 10px;
 	}
 }
 .nav{
-	font: 300 11px/30px open sans, sans serif;
+	font: 400 12px/30px Montserrat, sans serif;
 	text-transform: uppercase;
-	padding: 13px 0;
+	padding: 4px 0;
 
 	li{
 		display: inline-block;
 		list-style: none;
 		text-align: center;
 		position: relative;
-		top: 2px;
+		top: 7px;
 		white-space: nowrap;
 
-		&:hover{
-			//background-color: rgba(0, 0, 0, 0.05);
-		}
 		a{
 			text-decoration: none;
 			color: black;
 			display: block;
 			padding-right: 10px;
+
+			&:hover{
+				color: rgba(0, 0, 0, 0.5);
+			}
 		}
 	}
 	@media #{$mq-mobile}{
