--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -3,16 +3,8 @@
 @import "variables";
 @import "nav"; 
 
-@font-face {
-  font-family: 'amazon';
-  src: 	url('/fonts/amazonrg-webfont.woff')  format('woff'),
-  		url('/fonts/amazonrg.ttf')  format('truetype');
-}
-
-
-
 h1,h2,h3{
-	font-family: amazon, Pinyon Script, open sans;
+	font-family: Montserrat, sans serif;
 	font-weight: 400;
 }
 
@@ -21,12 +13,13 @@ html, body{
     -webkit-tap-highlight-color: rgba(0,0,0,0);  
     height: 100%;
 	margin: 0;
-	font-family:  open sans, sans-serif;
+	font-family:  Montserrat, sans serif;
 }
 
 .top{
-	height: 30vw;
+	height: 40vw;
 	position: relative;
+	width: 100%;
 }
 
 .title{
@@ -63,9 +56,8 @@ html, body{
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 30vw;
+	height: 40vw;
 	pointer-events: none;
-
 }
 
 .image-head{
@@ -108,7 +100,11 @@ html, body{
 		font-size: 18px;
 		padding: 0 15px; 
 	}
+
 }
+.container:after {
+		display: block;
+	}
 .image-container{
 	float: left;
 	margin-right: 25px;
@@ -145,9 +141,9 @@ html, body{
 	}
 }
 .media-container{
-	margin-top: 57px;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 76px;
+	margin-bottom: 21px;
 }
 .text-wrap{
 	@include span-columns(3);
@@ -200,76 +196,75 @@ a{
 	text-align: center;
 }
 
-.index .title{
-	left: 290px;
-	top: 55px;
+.homepage{
+	cursor: pointer;
+	//transition: .25s width;
+}
 
-	@media #{$mq-mobile}{
-		left: 190px;
-		top: 41px;
+.home{
+	display: none;
+	.container{
+		padding: 14px 20px 0px;
 	}
 }
-
-.services .title {
-	left: 290px;
-	top: 55px;
-}
-
-.bio .title{
-	left: 55.3%;
-	top: 70%;
-}
-
-.hair_institute .title{
-	width: 53%;
-	left: 74%;
-	top: 27%;
-	@media #{$mq-mobile}{
-		top: 43%;
-	}
-}
-
-.contact_us .title{
-	left: 52%;
-	top: 25%;
-
-	@media #{$mq-mobile}{
-		top: 42%;
-	}
-}
-
-
 .demo{
 	@extend .top;
 	float: right;
 	width: 50%;
 	margin-top: 47px;
+	margin-top: 25px;
+	.hero{
+		height: 28vw;
+	}
+}
+
+.image{
+	@extend .top;
+	float: right;
+	width: 50%;
+	margin-top: 25px;
+	padding-right: 30px;
 }
 
 .demo-serve{
 	float: left;
 	width: 49%;
-
+	display: block;
 }
 
 .services {
-	.top{
-		@extend .demo;
+	.image-head{
+		background-position-x: -345px;
 	}
 	.container{
 		@extend .demo-serve;
 	}
 }
-.bio {
-	.top{
-		@extend .demo;
-		margin-top: 30px;
+
+.bio, .contact_us, .job_opportunities {
+	.image-head{
+		height: 86%;
 	}
 	.content{
 		@extend .demo-serve;
 		padding-left: 20px;
 	}
 }
+
+.hair_institute  {
+	.image{
+		width: 63%;
+	}
+	image-head{
+		background-position-x: 0px;
+	}
+	.content{		
+		padding-left: 20px;
+		width: 33%;
+		float: left;
+	}
+}
+
 
 a,strong{
 	font-weight: 400;
@@ -282,7 +277,9 @@ a,strong{
 
 .column-container{
 	@include outer-container;
+	clear: both;
 	margin-top: 30px;
+	margin-bottom: 200px;
 }
 
 .column{
@@ -291,7 +288,60 @@ a,strong{
 	@include omega;
 	height: auto;
 	overflow: hidden;
+	position: relative;
+
+	h2{
+		font-size: 16px;
+	}
 	img{
 		width: 100%;
+	}
+	&:hover {
+		img{
+			opacity: .0;
+			cursor: pointer;
+		}
+		.cover{
+			display: block;
+		}
+	}
+}
+
+.cover{
+	display: none;
+	background-color: #ff2814;
+	height: 428px;
+	width: 97.4%;
+	position: absolute;
+	top: 0;
+
+	span{
+		top: 47%;
+		left: 50%;
+		position: relative;
+		color: white;
+		font-weight: 600;
+	}
+}
+.bottom{
+	height: 259px;
+	span{
+		top: 46%;
+		left: 50%;
+	}
+}
+
+footer{
+	background-color: black;
+	height: 94px;
+	clear: both;
+
+	p{
+		font-family: montserrat;
+		font-weight: 400;
+		font-size: 12px;
+		color: white;
+		line-height: 95px;
+		padding-left: 20px;
 	}
 }
