--- a/source/hair_institute.html.haml
+++ b/source/hair_institute.html.haml
@@ -2,6 +2,7 @@
 image: hair-institute
 title: Hair Institute
 hero: true
+video: true
 --- 
 %h1 Trichology
 %p <a href='http://www.worldtrichologysociety.org/what-is-trichology' target="_blank">Trichology</a> is a branch that deals with the scientific study and health of the hair and scalp. Trichologists are hair and scalp specialists who diagnose the causes of hair loss, breakage, thinning, miniaturization, diseases of the scalp, and all treatments are according to cause. We offer services using the latest hair care products from <a href='http://www.leonorgreyl-usa.com/leonor-greyl-customized-hairspa-treatment-centers/' target="_blank">Leonor Grey</a>, <a href='http://www.hairgrowthcenters.com/' target="_blank">Evolution Hair</a>, and <a href='http://www.igrowlaser.com/' target="_blank">Igrowlaser</a>.
@@ -54,4 +55,3 @@ What makes our customized treatments unique?
 		%li Crème aux Fleurs: The natural Sage and Chamomile in this (washing) treatment were specifically selected for their calming and soothing effects. This deep treatment is ideal for dry, color-treated and/or frizzy hair and scalps prone to sensitivity. 
 
 %p <small>*Mini Treatments are performed after regular treatment</small>
-
