adjusted layout width

--- a/source/layouts/elements/_nav.haml
+++ b/source/layouts/elements/_nav.haml
@@ -4,17 +4,19 @@
 
   %ul.nav
     %li
-      = link_to 'Services', 'services'
+      = link_to 'home', '/'
     %li
-      = link_to 'Bio', 'bio'
+      = link_to 'services', 'services'
     %li
-      = link_to 'Location', 'location'
+      = link_to 'bio', 'bio'
     %li
-      = link_to 'Hair Institute', 'hair_institute'
+      = link_to 'location', 'location'
     %li
-      = link_to 'Contact Us', 'contact_us'
+      = link_to 'hair institute', 'hair_institute'
     %li
-      = link_to 'Job Opportunities', 'job_opportunities'
+      = link_to 'contact', 'contact_us'
+    %li
+      = link_to 'job opportunities', 'job_opportunities'
  
  
 
