add active navigation

--- a/source/layouts/elements/_nav.haml
+++ b/source/layouts/elements/_nav.haml
@@ -9,17 +9,17 @@
 
 
   %ul.nav
-    %li
+    %li{ nav_active('services.html') }
       = link_to 'services', 'services'
-    %li
+    %li{ nav_active('bio.html') }
       = link_to 'bio', 'bio'
-    %li
+    %li{ nav_active('location.html') }
       = link_to 'location', 'location'
-    %li
+    %li{ nav_active('hair_institute.html') }
       = link_to 'hair institute', 'hair_institute'
-    %li
+    %li{ nav_active('contact_us.html') }
       = link_to 'contact', 'contact_us'
-    %li
+    %li{ nav_active('job_opportunities.html') }
       = link_to 'job opportunities', 'job_opportunities'
  
  
