add viewport meta tag

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -2,6 +2,7 @@
 %head
   %title Duarte Salon
   %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-type"}
+  %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
   %link{:href => "stylesheets/style.css", :media => "screen", :rel => "stylesheet", :title => "style", :type => "text/css"}
   %link{:href => "images/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
   %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Montserrat", :rel => "stylesheet", :type => "text/css"}
